results/SVCOMP/houdini/log-HttpServletRequest-2024_03_18_19_10_06.txt
import java.util.*;

public class HttpServletRequest {

  private Cookie cookie = null;
  private String tainted = null;

  public void setTaintedValue(String value) {
    tainted = value;
    this.cookie = new Cookie(tainted, tainted);
  }

  public String[] getParameterValues(String name) {
    return new String[] {tainted};
  }

  public String getAuthType() {
    return tainted;
  }

  public Cookie[] getCookies() {
    return new Cookie[] {cookie};
  }

  public String getHeader(String string) {
    return tainted;
  }

  public Enumeration getHeaders(String string) {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  public Enumeration getHeaderNames() {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  public String getQueryString() {
    return tainted;
  }

  public String getRemoteUser() {
    return tainted;
  }

  public StringBuffer getRequestURL() {
    return new StringBuffer(tainted);
  }

  public String getParameter(String string) {
    return tainted;
  }

  public Enumeration getParameterNames() {
    return Collections.enumeration(Collections.singleton("name"));
  }

  public Map getParameterMap() {
    Map<String, String> map = new HashMap<>();
    map.put("name", tainted);
    return map;
  }

  public String getProtocol() {
    return tainted;
  }

  public String getScheme() {
    return tainted;
  }
}


/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:5: error: cannot find symbol
  private Cookie cookie = null;
          ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:21: error: cannot find symbol
  public Cookie[] getCookies() {
         ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:10: error: cannot find symbol
    this.cookie = new Cookie(tainted, tainted);
                      ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:22: error: cannot find symbol
    return new Cookie[] {cookie};
               ^
  symbol:   class Cookie
  location: class HttpServletRequest
4 errors

